--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This is deep brah!
+This is deep brah! 
+I am adding multiple text to this file!
 First attempt at programming anything.
 Merging Time!
